@@ -41,7 +41,8 @@
 
 %{
 #include <sys/stat.h>
-#include <sys/fcntl.h>
+
+#include <fcntl.h>
 
 #include <dpkg/i18n.h>
 #include <dpkg/dpkg.h>
