@@ -10,6 +10,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
     - Do not run qsort() over the scandir() list if it is NULL.
     - Add a setexecfilecon() compatibility function out from dpkg code.
   * Use SELinux setexecfilecon() if available in dpkg instead of ad-hoc code.
+  * Replace obsolete <sys/fcntl.h> with <fcntl.h>, which fixes compilation on
+    Android. Thanks to Fredrik Fornwall <fredrik@fornwall.net>. Closes: #752036
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
